@@ -2,10 +2,10 @@ package com.growit.app.fake.todo;
 
 import com.growit.app.todo.domain.ToDo;
 import com.growit.app.todo.domain.ToDoRepository;
+import com.growit.app.todo.domain.dto.GetToDoDateQueryFilter;
 import java.time.LocalDate;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
 public class FakeToDoRepository implements ToDoRepository {
   private final Map<String, List<ToDo>> store = new ConcurrentHashMap<>();
@@ -67,7 +67,17 @@ public class FakeToDoRepository implements ToDoRepository {
   public List<ToDo> findByUserIdAndDate(String userId, LocalDate today) {
     return store.getOrDefault(userId, Collections.emptyList()).stream()
         .filter(todo -> todo.getDate().equals(today))
-        .collect(Collectors.toList());
+        .toList();
+  }
+
+  @Override
+  public List<ToDo> findByDateFilter(GetToDoDateQueryFilter filter) {
+    return List.of();
+  }
+
+  @Override
+  public List<ToDo> findByGoalId(String goalId) {
+    return List.of();
   }
 
   public void clear() {
